welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: value largeur is not a member of Int
	for ( i<- 0 largeur+hauteur() )
                    ^